# proc_macros_workshop

./: Cargo.toml  README.md
validator_extra_core/: Cargo.toml
validator_extra_core/src/: lib.rs
validator_extra_example/: Cargo.toml
validator_extra_macros/: Cargo.toml
validator_extra_macros/src/: lib.rs
