[package]
name = "validator_extra_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# validator = { version = "0.16", features = ["derive"] }
validator = "0.16"
validator_extra_macros = { path = "../validator_extra_macros" }